# cpp-examples

./: .build.sh  .build_and_run_pure.sh  .build_json11.sh  .build_pure.sh  .build_qpoases.sh  .build_vrep.sh  .gitmodules  .test_qpoases.sh  .travis.yml  README.md  build_pure.ps1
cmake/: README.md  dqrobotics_dependencies.cmake
cmake/build-vrep_interface-Desktop_Qt_6_3_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  vrep_interface_move_kuka
cmake/build-vrep_interface-Desktop_Qt_6_3_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-fa88856ff9da812d11c8.json  cmakeFiles-v1-1ec3b7c2937c90c1a6a3.json  codemodel-v2-2f3b1db478771ed3f73c.json  index-2022-07-12T03-58-15-0719.json  target-vrep_interface_move_kuka-Debug-bdfa40e130e9c2996aff.json  target-vrep_interface_move_kuka_and_youbot-Debug-0046e3991c33a479541d.json
cmake/build-vrep_interface-Desktop_Qt_6_3_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
cmake/build-vrep_interface-Desktop_Qt_6_3_1_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: AlignedBox.h.5A0BB4AEC7863A62.idx  AngleAxis.h.E1D59C16BCEB7D9A.idx  Array.h.3CB626187E933DA9.idx  ArrayBase.h.27D1C33E9BDDD4AC.idx  ArrayCwiseBinaryOps.h.884BE1A71CB162FA.idx  ArrayCwiseUnaryOps.h.80265465E29BAEEA.idx  ArrayWrapper.h.77A91A9F68F9B322.idx  Assign.h.98FAE1A289E3B0B6.idx  AssignEvaluator.h.011EEB79C71C67D1.idx  AssignmentFunctors.h.7EB1E0FFDA44221B.idx  BDCSVD.h.EB1AC3598108AAB6.idx  BandMatrix.h.1BF55B0B952E28FA.idx  BinaryFunctors.h.C03DCF882D7F550F.idx  BlasUtil.h.A00E918ECC24FE2B.idx  Block.h.C2E2FAA5DE7B6654.idx  BlockHouseholder.h.50748C6F2DAB88EB.idx  BlockMethods.h.A8348095E1733A95.idx  BooleanRedux.h.A09AA4A8EC21A2D5.idx  Cholesky.570DA0E6D8FFBCD1.idx  ColPivHouseholderQR.h.90D998E8080BF312.idx  CommaInitializer.h.ED275A0B466E4ACA.idx  CommonCwiseBinaryOps.h.F1D683E3F303DEE8.idx  CommonCwiseUnaryOps.h.099222E7E32A0A89.idx  CompleteOrthogonalDecomposition.h.AED73F0C46332F3E.idx  Complex.h.3CB4BDBC1657F707.idx  Complex.h.491AB1EC9D1C952A.idx  ComplexEigenSolver.h.A1815D4FE78B63FD.idx  ComplexSchur.h.E0652F7B43016F5C.idx  ConditionEstimator.h.63E1875B96F6588C.idx  ConjHelper.h.1DD058A9E36C6D5A.idx  Constants.h.AB22452C495D2CDD.idx  Core.21D5439CEE14EF2F.idx  CoreEvaluators.h.619EB41769835908.idx  CoreIterators.h.2212A583AC7C279A.idx  CwiseBinaryOp.h.55AEFB162D6124CD.idx  CwiseNullaryOp.h.359446853074E93D.idx  CwiseTernaryOp.h.C3F5C4007B8FAC6B.idx  CwiseUnaryOp.h.5717F0BDD9E4A750.idx  CwiseUnaryView.h.0D4E3E4B3B3B1D2E.idx  DQ.h.BD3FD14511E8A2C0.idx  (+382 more)
cmake/coppeliasim/basic_commands/: CMakeLists.txt  basic_commands.cpp
cmake/coppeliasim/franka_emika_panda_robot/: CMakeLists.txt  franka_emika_panda_robot.cpp
cmake/coppeliasim/robot_jointnames/: CMakeLists.txt  robot_jointnames.cpp
cmake/cplex_interface/: CMakeLists.txt  README.md  cplex_interface_test.cpp
cmake/dh_parameters/: CMakeLists.txt  dh_parameters.cpp
cmake/jacobian_time_derivative/: CMakeLists.txt  README.md  jacobian_time_derivative.cpp  jacobian_time_derivative_test.cpp  main.cpp
cmake/json11_interface/: CMakeLists.txt  README.md  dq_serial_manipulator_denso.json  dq_serial_manipulator_dh.json  json11_interface_example.cpp
cmake/multiplication_evaluation/: CMakeLists.txt  README.md
cmake/papers_with_code/: README.md
cmake/performance_evaluation/: CMakeLists.txt  README.md  multiplication_evaluation.cpp  performance_evaluation.cpp
cmake/qpoases_interface/: CMakeLists.txt  README.md  qpoases_interface.cpp
cmake/serial_manipulator_joint_types/: CMakeLists.txt  serial_manipulator_joint_types.cpp
cmake/simple_tests/: CMakeLists.txt  simple_tests.cpp  test_issue_24.cpp  test_issue_24.h  test_issue_25.cpp  test_issue_25.h  test_issue_26.cpp  test_issue_26.h  test_issue_44.cpp  test_issue_44.h  test_issue_py_18.cpp  test_issue_py_18.h  test_issue_py_22.cpp  test_issue_py_22.h
cmake/vrep_interface/: CMakeLists.txt  README.md  vrep_interface_move_kuka.cpp  vrep_interface_move_kuka_and_youbot.cpp
cmake/vrep_interface_tests/: DQRoboticsApiCommandServer.lua  README.md
cmake/vrep_interface_tests/extracting_inertial_parameters/: CMakeLists.txt  extracting_inertial_parameters.cpp  extracting_inertial_parameters.ttt
cmake/vrep_interface_tests/free_flying_robot/: CMakeLists.txt  README.md  free_flying_robot.cpp  free_flying_robot.ttt
cmake/vrep_interface_tests/joint_torque_commands/: CMakeLists.txt  README.md  joint_torque_commands.cpp  joint_torque_commands_no_gravity.ttt
cmake/vrep_interface_tests/joint_velocity_commands/: CMakeLists.txt  joint_velocity_commands.cpp  joint_velocity_commands.ttt
cmake/vrep_interface_tests/line_to_line_angle_jacobian/: CMakeLists.txt  README.md  test_dynamic_conic_constraint.cpp  test_dynamic_conic_constraint.ttt
